--- a/extra.html
+++ b/extra.html
@@ -58,6 +58,46 @@
         <p>Additional materials and references to supplement your learning.</p>
       </div>
     </div>
+    
+     <div class="container mb-5 animate-up delay-100">
+      <div class="table-container">
+        <table class="custom-table">
+          <thead>
+            <tr>
+              <th scope="col" style="width: 25%">Topic</th>
+              <th scope="col">Description & Objectives</th>
+              <th scope="col" style="width: 20%; text-align: center;">Resource</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><strong>Day 1 Summary</strong></td>
+              <td>Day 1: Computer Vision Summary </td>
+              <td class="text-center"><a href="./Summaries/Day1_Computer_Vision_Summary.pdf"
+                  class="table-btn">Open</a></td>
+            </tr>
+            <tr>
+              <td><strong>Day 2 Summary</strong></td>
+              <td>Day 2: Practical AI Summary </td>
+              <td class="text-center"><a href="./Summaries/Day2_Computer_Vision_Summary.pdf"
+                  class="table-btn">Open</a></td>
+            </tr>
+            <tr>
+              <td><strong>Day 3 Part 1 Summary</strong></td>
+              <td>Day 3_1: Image Segmentation</td>
+              <td class="text-center"><a href="./Summaries/Day3 _2_Computer_Vision_Summary.pdf"
+                  class="table-btn">Open</a></td>
+            </tr>
+            <tr>
+              <td><strong>Day 3 Part 2 Summary</strong></td>
+              <td>Day 3_2: Object Detection </td>
+              <td class="text-center"><a href="./Summaries/Day3 _2_Computer_Vision_Summary.pdf"
+                  class="table-btn">Open</a></td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
 
   </main>
 
